core behavior for manualMatchReport is complete

--- a/match/misc/example_settings.json
+++ b/match/misc/example_settings.json
@@ -9,6 +9,7 @@
                                 "matchDay": "4",
                                 "matchDate": "July 6, 2022",
                                 "matchType": "Regular Season",
+                                "matchFormat": "4-gs",
                                 "home": "Gorillas",
                                 "away": "Peppermint",
                                 "roomName": "badlands",
@@ -18,6 +19,7 @@
                                 "matchDay": "4",
                                 "matchDate": "May 25, 2022",
                                 "matchType": "Regular Season",
+                                "matchFormat": "4-gs",
                                 "home": "Thermal",
                                 "away": "Gorillas",
                                 "roomName": "fury",
@@ -33,6 +35,7 @@
                                     "forfeits": [
                                         {
                                             "team": "Gorillas",
+                                            "game_no": 1,
                                             "game_by_time": "2022-07-14 06:49 UTC"
                                         }
                                     ]
@@ -42,8 +45,14 @@
                     }
                 },
                 "LobbyHashes": {
-                    "1": [-8600427675859063065, 7192519824993810708],
-                    "2": [4301634076316122128, 6282479947756218303]
+                    "1": [
+                        -8600427675859063065,
+                        7192519824993810708
+                    ],
+                    "2": [
+                        4301634076316122128,
+                        6282479947756218303
+                    ]
                 },
                 "MatchDay": "4"
             }
