--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ parso==0.8.3
 pathspec==0.11.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==10.0.1
 platformdirs==3.10.0
 prompt-toolkit==3.0.38
 psutil==5.9.5
